--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes\\stack"]
-	path = themes\\stack
-	url = https://github.com/miclnl/hugo-theme-stack
+[submodule "themes/stack"]
+	path = themes/stack
+	url = https://github.com/miclnl/hugo-theme-stack.git
