--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,5 +1,6 @@
 ﻿backend:
   name: git-gateway
+  branch: main
 
 media_folder: "static/img" # Folder where user uploaded files should go
 public_folder: "img"
