--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -30,8 +30,16 @@ collections:
       - { label: 'Omschrijving', name: 'description', widget: 'string' }
       - { label: 'Publicatie datum', name: 'date', widget: 'datetime' }
       - { label: 'Inhoud', name: 'body', widget: 'markdown' }
-      - { label: 'Menu', name: 'menu/main/weight', widget: 'number', default: -90, value_type: 'int', min: -100, max: 100, step: 10 }
-      - { label: 'menuuser', name: 'menu/main/pre', widget: 'hidden', default: 'user' }
+      - label: 'Menu'
+        name: 'menu'
+        widget: 'object'
+        fields:
+          - label: 'main'
+            name: 'main'
+            widget: 'object'
+            fields:
+              - { label: 'Waar in het menu', name: 'weight', widget: 'number', default: -90, value_type: 'int', min: -100, max: 100, step: 10 }
+              - { label: 'menuuser', name: 'pre', widget: 'hidden', default: 'user' }
   - name: 'blog'
     label: 'Blog'
     folder: 'content/post'
